maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:63: error: not found: value sommeAngle
  sommeAngle = sommeAngle + 1
  ^Escaper:66: error: not found: value sommeAngle
    sommeAngle = sommeAngle - 1
    ^Escaper:73: error: not found: value sommeAngle
    sommeAngle = sommeAngle - 1
    ^